infrastructure/pgadmin/base/pgadmin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-httproute
  namespace: pgadmin
spec:
  parentRefs:
  - name: platform-gateway
    namespace: nginx-gateway

  hostnames:
  - pgadmin.stackcouture.online

  rules:
  - backendRefs:
    - name: pgadmin
      port: 80
